# wshorturl

./: .gitignore  Cargo.toml  Dockerfile  entrypoint.sh
.github/workflows/: docker-image.yml
src/: config.rs  database.rs  main.rs
src/database/: yaml_database.rs
src/routes/: default.rs
