[package]
name = "wshorturl"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3"
serde = "1.0.132"
serde_yaml = "0.8.23"
anyhow = "1.0.52"
thiserror = "1.0.30"
envy = "0.4.2"
once_cell = "1.9.0"